# ai-push-hooks

./: .ai-doc-sync.toml  .ai-push-hooks.toml  .gitignore  .npmignore  LICENSE  README.md  ai-push-hooks.toml  hook.py  manifest  package.json  publishing.md  pyproject.toml  run.sh
.github/workflows/: release.yml
prompts/: beads-status.txt  create-pr.txt  query.txt  sync.txt
src/ai_doc_sync_hook/: __init__.py  __main__.py  artifacts.py  cli.py  config.py  engine.py  hook.py  prompts_builtin.py  types.py
src/ai_doc_sync_hook/executors/: apply.py  exec.py
src/ai_doc_sync_hook/modules/: __init__.py
src/ai_doc_sync_hook/prompts/: analysis.txt  apply.txt  sync.txt
src/ai_push_hooks/: __init__.py  artifacts.py  cli.py  config.py  hook.py  prompts_builtin.py  types.py
src/ai_push_hooks/executors/: assertions.py  exec.py  llm.py
src/ai_push_hooks/modules/: beads.py  docs.py  pr.py
tests/: conftest.py  test_beads_module.py  test_config.py  test_docs_module.py  test_init_command.py  test_llm_executor.py  test_pr_module.py  test_prompt_resolution.py  test_scheduler.py
