[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-push-hooks"
version = "0.1.10"
description = "Modular AI push-hook workflow runner"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ai-push-hooks contributors" }]
keywords = ["git", "lefthook", "docs", "ai", "pre-push"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
ai-push-hooks = "ai_push_hooks.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
